todo-item component added + styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <app-page-header></app-page-header>
+<div class="todo-list">
+  <div class="todo-list-items">
+    <app-todo-item [key]="'Do some work'" [value]="false"></app-todo-item>
+    <app-todo-item [key]="'Write some code'" [value]="true"></app-todo-item>
+  </div>
+</div>
