--- a/src/app/todo-item/todo-item.component.html
+++ b/src/app/todo-item/todo-item.component.html
@@ -1,1 +1,7 @@
-<p>todo-item works!</p>
+<div class="todo-item-container">
+    <label class="todo-item-label" for="todo-1" (change)="onChange()">
+        <input class="todo-item-check" type="checkbox" id="todo-1" [checked]="value ? true : false">
+        <span class="todo-item-text">{{key}}</span>
+    </label>
+    <div class="todo-item-delete">X</div>
+</div>
