Add/Remove finctionality Added + custom checkbox

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-page-header></app-page-header>
 <div class="todo-list">
   <div class="todo-list-items">
-    <app-todo-item [key]="'Do some work'" [value]="false"></app-todo-item>
-    <app-todo-item [key]="'Write some code'" [value]="true"></app-todo-item>
+    <app-todo-item *ngFor="let item of app.items; let i=index" [id]="item.id" [key]="item.key" [value]="item.value"></app-todo-item>
   </div>
 </div>
