styling and minor polish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,9 @@
     </div>
     <app-todo-item *ngFor="let item of app.items; let i=index" [id]="item.id" [key]="item.key" [value]="item.value"></app-todo-item>
     <div class="todo-total-container">
-      <p *ngIf="app.activeItemCount > 0" class="todo-total-text"><b>{{app.activeItemCount}}</b> item{{(app.activeItemCount == 1) ? '' : 's'}} left to do</p>
-      <p *ngIf="app.activeItemCount == 0 && app.items.length > 0" class="todo-total-text">All items completed</p>
-      <p *ngIf="app.activeItemCount == 0 && app.items.length === 0" class="todo-total-text">No items to complete</p>
+      <p *ngIf="app.activeItemCount > 0" class="todo-total-text"><b>{{app.activeItemCount}}</b> item{{(app.activeItemCount == 1) ? '' : 's'}} left</p>
+      <p *ngIf="app.activeItemCount == 0 && app.items.length > 0" class="todo-total-text">All items done</p>
+      <p *ngIf="app.activeItemCount == 0 && app.items.length === 0" class="todo-total-text">No items to be done</p>
     </div>
   </div>
 </div>
